# IntimateCodex

./: .gitignore  README.md  credits.txt
data/text/: alice.txt  dracula.txt  frankenstein.txt  grimms.txt  macbeth.txt  metamorphosis.txt
icon/: book_cut.icns
intimate_codex_linux_project/: CMakeLists.txt  setup.sh
intimate_codex_linux_project/cmake/: linux64.cmake
intimate_codex_mac_project/: Project.xcconfig  src
intimate_codex_mac_project/IntimateCodex.xcodeproj/: project.pbxproj
intimate_codex_mac_project/IntimateCodex.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
intimate_codex_mac_project/IntimateCodex.xcodeproj/project.xcworkspace/xcshareddata/: IntimateCodex.xccheckout
intimate_codex_mac_project/IntimateCodex.xcodeproj/project.xcworkspace/xcuserdata/awallace.xcuserdatad/: UserInterfaceState.xcuserstate
intimate_codex_mac_project/IntimateCodex.xcodeproj/xcshareddata/xcschemes/: emptyExample Debug.xcscheme  emptyExample Release.xcscheme
intimate_codex_mac_project/IntimateCodex/Images.xcassets/AppIcon.appiconset/: Contents.json
intimate_codex_win_project/: emptyExample.vcxproj  emptyExample.vcxproj.filters
release/: about_and_credits.txt
release/intimate_codex_mac/: about_and_credits.txt
release/intimate_codex_mac/IntimateCodex.app/Contents/: Info.plist
release/intimate_codex_mac/IntimateCodexDebug.app/Contents/: Info.plist
release/intimate_codex_mac/data/text/: alice.txt  frankenstein.txt  grimms.txt  metamorphosis.txt  poe.txt
release/intimate_codex_win/data/text/: dracula.txt
src/: Background.cpp  Background.h  TextInput.cpp  TextInput.h  Word.cpp  Word.h  main.cpp  ofApp.cpp  ofApp.h
test_files/: accent_test.txt
